--- a/tenter/src/App.css
+++ b/tenter/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-image: linear-gradient(to top, #06101f, #002154, #002d8c, #2c2fbf, #7a12eb);
+  background-image: linear-gradient(to right top, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
