--- a/tenter/src/login/RegistrationPage.css
+++ b/tenter/src/login/RegistrationPage.css
@@ -1,7 +1,7 @@
 .registration-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: top;
     align-items: center;
     height: 100vh;
     padding: 20px;
