--- a/tenter/src/nav/nav.css
+++ b/tenter/src/nav/nav.css
@@ -1,22 +1,24 @@
 .navbar {
-    position: fixed;
-    top: 0;
     width: 100%;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: lightgray;
 }
 
+
 .links {
-    position: relative;
     float: left;
     left: 0;
 }
 
 .link {
-    padding-left: 10px;
-    padding-right: 10px;
+    position: relative;
+    padding: 10px;
 }
 
 .avatars {
-    padding: 10px;
     float: right;
     align-items: center;
 }
@@ -28,5 +30,5 @@
 
 a {
     text-decoration: none !important;
-    color: rgb(231, 231, 231);
+    color: rgb(44, 44, 42);
 }
