--- a/tenter/src/profile/Profile.css
+++ b/tenter/src/profile/Profile.css
@@ -1,20 +1,24 @@
+.profile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .profileContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding-top: 100px;
+    width: 30%;
 }
 
 .picture {
-    position: relative;
     box-shadow: 0px 11px 13px 0px rgba(0, 0, 0, 0.3);
     border-radius: 20px;
     overflow: hidden;
     width: 350px;
-    /* Adjust the width as desired */
     height: 300px;
-    /* Adjust the height as desired */
 }
 
 .picture img {
@@ -22,4 +26,18 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.formButton {
+    width: 50%;
+    padding: 20px;
+    display: flex;
+    flex-direction: tow;
+    justify-content: space-between;
+}
+
+.card>h3 {
+    position: absolute;
+    bottom: 10px;
+    color: black;
 }
