--- a/tenter/src/Chat.css
+++ b/tenter/src/Chat.css
@@ -6,15 +6,17 @@
     height: 70px;
     border-bottom: 1px solid #fafafa;
 }
-a{
+
+a {
     text-decoration: none;
     color: inherit;
 }
+
 .chat__details {
     flex: 1;
 }
 
-.chat__details > p {
+.chat__details>p {
     color: gray;
 }
 
@@ -24,4 +26,8 @@ a{
 
 .chat__image {
     margin-right: 20px;
+}
+
+body {
+    overflow-x: hidden;
 }
